tdf#157829 sw: Implemented line break underflow for bidi portions

Previously, bidi portions did not handle underflow in word wrapping.
This caused bidi portions to break at format changes during wrapping,
instead of backtracking to a valid break opportunity.

Change-Id: Ib86effe2642a9d133242c28538026d9b4a7e90e9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/171006
Tested-by: Jenkins
Reviewed-by: Jonathan Clark <jonathan@libreoffice.org>